@@ -1,0 +1,15 @@
+/* { dg-do compile } */
+/* { dg-options "-fstrict-overflow -O2 -Wstrict-overflow" } */
+
+/* Don't warn about an overflow when threading jumps.  We used to get
+   a warning from comparing bounds generated by VRP.  */
+
+int
+bar(int a, int b, int n)
+{
+  if (b > a)
+    n = a - b;
+  if (a >= b)
+    n = 1;
+  return n;
+}
